<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/regMenueHomeBtn"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:layout_marginEnd="323dp"
        android:layout_marginRight="323dp"
        android:layout_marginBottom="4dp"
        android:onClick="HomeFromMain"
        android:text="@string/regMenueHomeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Theory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="321dp"
        android:layout_marginLeft="321dp"
        android:onClick="Theory"
        android:text="@string/TheoryBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DifSlctTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/DifSlctTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="207dp"
        android:layout_marginLeft="207dp"
        android:layout_marginEnd="204dp"
        android:layout_marginRight="204dp"
        android:layout_marginBottom="395dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/DifOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DifOne" />

        <RadioButton
            android:id="@+id/DifTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DifTwo" />
    </RadioGroup>

    <Button
        android:id="@+id/StartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:layout_marginBottom="263dp"
        android:onClick="StartGame"
        android:text="@string/StartBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>