<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/NextBtn"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="Next"
        android:text="@string/NextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="233dp"
        android:layout_height="167dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/PhotoToQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test" />

    <Button
        android:id="@+id/answBtn1"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/apple"
        android:onClick="NextChangeAnsws"
        android:text="@null"
        app:layout_constraintBottom_toTopOf="@+id/answBtn3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/answBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:layout_marginBottom="38dp"
        android:text="@string/answ2"
        app:layout_constraintBottom_toTopOf="@+id/answBtn4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/answBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginBottom="196dp"
        android:text="@string/answ3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/answBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="196dp"
        android:text="@string/answ4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="159dp"
        android:layout_height="61dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="77dp"
        android:button="@drawable/apple"
        android:text="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>